  * debian/control: Remove "cross" from profiles for build-dep on libssl-dev
  * [mips64*] debian/control: Build-depend on gcc-multilib for linux-perf
  * debian/lib/python: Use raw strings for all regexes
  * debian/control: Fix restrictions for build-deps on asciidoctor and
    patchutils
  * Add support for specifying build-dependencies in binary package templates

 -- Ben Hutchings <ben@decadent.org.uk>  Mon, 10 Sep 2018 22:25:53 +0100

linux (4.19~rc3-1~exp1) experimental; urgency=medium

  * New upstream release candidate

  [ Ben Hutchings ]
  * [s390x] linux-image: Install compressed kernel image (fixes FTBFS)
  * [powerpc*] boot: Fix missing crc32poly.h when building with KERNEL_XZ
    (fixes FTBFS)
  * [x86] boot: Fix EFI stub alignment
  * wireless: Update "wireless: Disable regulatory.db direct loading" for
    4.19-rc3
  * aufs: Update support patchset to aufs4.x-rcN 20180910

 -- Ben Hutchings <ben@decadent.org.uk>  Mon, 10 Sep 2018 20:13:55 +0100

linux (4.19~rc2-1~exp1) experimental; urgency=medium

  * New upstream release candidate

  [ Ben Hutchings ]
  * aufs: Disable until it is updated for Linux 4.19
  * debian/rules.d: Update for move of bin2c back up to scripts
  * locking/lockdep: Delete unnecesary #include (fixes liblockdep build)
  * [hppa] debian/control: Simplify build-dependencies for 64-bit toolchain
  * Compile with gcc-8 on all architectures
  * udeb: Merge configuration directories and files across architectures
  * [alpha,hppa] udeb: Remove incorrect dependency overrides

 -- Ben Hutchings <ben@decadent.org.uk>  Mon, 03 Sep 2018 21:34:41 +0100

linux (4.18.6-1) unstable; urgency=medium

  * New upstream stable update:
    https://www.kernel.org/pub/linux/kernel/v4.x/ChangeLog-4.18.6
    - scsi: libsas: dynamically allocate and free ata host
    - xprtrdma: Fix disconnect regression
    - mei: don't update offset in write
    - cifs: add missing support for ACLs in SMB 3.11
    - cifs: fix uninitialized ptr deref in smb2 signing