@@ -1,6 +1,7 @@
 Package: @source_basename@-doc-@version@
 Build-Profiles: <!stage1 !nodoc>
 Architecture: all
+Build-Depends: graphviz, python3-sphinx, python3-sphinx-rtd-theme
 Depends: ${misc:Depends}
 Section: doc
 Multi-Arch: foreign
