@@ -2,6 +2,7 @@ Package: @source_basename@-source-@version@
 Build-Profiles: <!stage1 !pkg.linux.nosource>
 Architecture: all
 Section: kernel
+Build-Depends: patchutils
 Depends: binutils, xz-utils, ${misc:Depends}
 Recommends: libc6-dev | libc-dev, gcc, make, bc, @source_basename@-config-@version@
 Suggests: libncurses-dev | ncurses-dev, libqt4-dev, pkg-config
