@@ -2,6 +2,7 @@ Package: linux-cpupower
 Build-Profiles: <!stage1 !pkg.linux.notools>
 Section: admin
 Architecture: linux-any
+Build-Depends: libpci-dev
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: CPU power management tools for Linux
  The cpupower command allows inspection and control of cpufreq and
@@ -32,6 +33,15 @@ Description: CPU frequency and voltage scaling tools for Linux (development file
 Package: usbip
 Build-Profiles: <!stage1 !pkg.linux.notools>
 Architecture: linux-any
+Build-Depends:
+ autoconf,
+ automake,
+ libtool,
+ libglib2.0-dev,
+ libudev-dev,
+ libwrap0-dev,
+# used by debian/rules.d/tools/usb/usbip
+ rsync,
 Depends: usbutils, ${shlibs:Depends}, ${misc:Depends}
 Section: admin
 Description: USB device sharing system over IP network
