@@ -12,6 +12,8 @@ linux (4.19~rc3-1~exp2) UNRELEASED; urgency=medium
   * debian/control: Fix restrictions for build-deps on asciidoctor and
     patchutils
   * Add support for specifying build-dependencies in binary package templates
+  * debian/templates: Move various build-dependencies to binary package
+    templates
 
  -- Ben Hutchings <ben@decadent.org.uk>  Mon, 10 Sep 2018 22:25:53 +0100
 
